--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>Test</scope>
 		</dependency>        
     </dependencies>
     <build>
